# reasons-service-cli

./: .gitignore  README.md  pyproject.toml
reasons_service_cli/: SKILL.md  __init__.py  auth.py  cli.py  client.py  config.py  mcp_server.py  synthesis.py
