[project]
name = "reasons-service-cli"
version = "0.2.3"
description = "CLI client for reasons-service — ask questions, search beliefs, list domains"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "mcp[cli]>=1.0",
]

[project.scripts]
reasons-service-cli = "reasons_service_cli.cli:main"
reasons-service-mcp = "reasons_service_cli.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reasons_service_cli"]
